--- a/views/shop.hbs
+++ b/views/shop.hbs
@@ -17,7 +17,7 @@
             </a></li>
         </ul>
         <div class="offcanvas__logo">
-            <a href="./index.hbs"><img src="../public/img/logo.png" alt=""></a>
+            <a href="./index.hbs"><img src="img/logo.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__auth">
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="col-xl-3 col-lg-2">
                     <div class="header__logo">
-                        <a href="./index.hbs"><img src="../public/img/logo.png" alt=""></a>
+                        <a href="./index.hbs"><img src="img/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-7">
@@ -316,7 +316,7 @@
                                 <div class="product__item__pic set-bg" data-setbg="img/shop/shop-1.jpg">
                                     <div class="label new">New</div>
                                     <ul class="product__hover">
-                                        <li><a href="../public/img/shop/shop-1.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
+                                        <li><a href="img/shop/shop-1.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
                                         <li><a href="#"><span class="icon_heart_alt"></span></a></li>
                                         <li><a href="#"><span class="icon_bag_alt"></span></a></li>
                                     </ul>
@@ -338,7 +338,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/shop/shop-2.jpg">
                                     <ul class="product__hover">
-                                        <li><a href="../public/img/shop/shop-2.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
+                                        <li><a href="img/shop/shop-2.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
                                         <li><a href="#"><span class="icon_heart_alt"></span></a></li>
                                         <li><a href="#"><span class="icon_bag_alt"></span></a></li>
                                     </ul>
@@ -358,9 +358,9 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="../public/img/shop/shop-3.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="img/shop/shop-3.jpg">
                                     <ul class="product__hover">
-                                        <li><a href="../public/img/shop/shop-3.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
+                                        <li><a href="img/shop/shop-3.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
                                         <li><a href="#"><span class="icon_heart_alt"></span></a></li>
                                         <li><a href="#"><span class="icon_bag_alt"></span></a></li>
                                     </ul>
@@ -402,10 +402,10 @@
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="product__item sale">
-                                <div class="product__item__pic set-bg" data-setbg="../public/img/shop/shop-5.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="img/shop/shop-5.jpg">
                                     <div class="label">Sale</div>
                                     <ul class="product__hover">
-                                        <li><a href="../public/img/shop/shop-5.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
+                                        <li><a href="img/shop/shop-5.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
                                         <li><a href="#"><span class="icon_heart_alt"></span></a></li>
                                         <li><a href="#"><span class="icon_bag_alt"></span></a></li>
                                     </ul>
@@ -533,7 +533,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-2 col-md-4 col-sm-4 p-0">
-                    <div class="instagram__item set-bg" data-setbg="../public/img/instagram/insta-1.jpg">
+                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-1.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -541,7 +541,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 p-0">
-                    <div class="instagram__item set-bg" data-setbg="../public/img/instagram/insta-2.jpg">
+                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-2.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -549,7 +549,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 p-0">
-                    <div class="instagram__item set-bg" data-setbg="../public/img/instagram/insta-3.jpg">
+                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-3.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -557,7 +557,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 p-0">
-                    <div class="instagram__item set-bg" data-setbg="../public/img/instagram/insta-4.jpg">
+                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-4.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -565,7 +565,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 p-0">
-                    <div class="instagram__item set-bg" data-setbg="../public/img/instagram/insta-5.jpg">
+                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-5.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -573,7 +573,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 p-0">
-                    <div class="instagram__item set-bg" data-setbg="../public/img/instagram/insta-6.jpg">
+                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-6.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -592,16 +592,16 @@
                 <div class="col-lg-4 col-md-6 col-sm-7">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="./index.hbs"><img src="../public/img/logo.png" alt=""></a>
+                            <a href="./index.hbs"><img src="img/logo.png" alt=""></a>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                         cilisis.</p>
                         <div class="footer__payment">
-                            <a href="#"><img src="../public/img/payment/payment-1.png" alt=""></a>
-                            <a href="#"><img src="../public/img/payment/payment-2.png" alt=""></a>
-                            <a href="#"><img src="../public/img/payment/payment-3.png" alt=""></a>
-                            <a href="#"><img src="../public/img/payment/payment-4.png" alt=""></a>
-                            <a href="#"><img src="../public/img/payment/payment-5.png" alt=""></a>
+                            <a href="#"><img src="img/payment/payment-1.png" alt=""></a>
+                            <a href="#"><img src="img/payment/payment-2.png" alt=""></a>
+                            <a href="#"><img src="img/payment/payment-3.png" alt=""></a>
+                            <a href="#"><img src="img/payment/payment-4.png" alt=""></a>
+                            <a href="#"><img src="img/payment/payment-5.png" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -669,13 +669,3 @@
     <!-- Search End -->
 
     <!-- Js Plugins -->
-    <script src="../public/js/jquery-3.3.1.min.js"></script>
-    <script src="../public/js/bootstrap.min.js"></script>
-    <script src="../public/js/jquery.magnific-popup.min.js"></script>
-    <script src="../public/js/jquery-ui.min.js"></script>
-    <script src="../public/js/mixitup.min.js"></script>
-    <script src="../public/js/jquery.countdown.min.js"></script>
-    <script src="../public/js/jquery.slicknav.js"></script>
-    <script src="../public/js/owl.carousel.min.js"></script>
-    <script src="../public/js/jquery.nicescroll.min.js"></script>
-    <script src="../public/js/main.js"></script>
