--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,6 +1,10 @@
-<br>
-<div class="row h-100">
-   <div class="col-sm-12 my-auto">
-     <input type="text" placeholder="Search..">
-   </div>
-</div>
+<form action="">
+    <div class="wrap">
+    <div class="form-group">
+        <input type="text" name="q" id="search-input" class="searchTerm" placeholder="What are you looking for?">
+        <button type="submit" class="btn btn-primary">
+            <i class="fa fa-search"></i>
+        </button>
+    </div>
+    </div>
+</form>
