--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,4 +1,4 @@
-<form action="">
+<form method="GET" action="">
     <div class="wrap">
     <div class="form-group">
         <input type="text" name="q" id="search-input" class="searchTerm" placeholder="What are you looking for?">
