--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -16,9 +16,9 @@
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="/product">Product Details</a></li>
-                                    <li><a href="/shop-cart">Shop Cart</a></li>
+                                    <li><a href="/shopcart">Shop Cart</a></li>
                                     <li><a href="/checkout">Checkout</a></li>
-                                    <li><a href="/blog-details">Blog Details</a></li>
+                                    <li><a href="/blogdetails">Blog Details</a></li>
                                 </ul>
                             </li>
                             <li><a href="./blog">Blog</a></li>
