Connect to mongodb

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -18,7 +18,7 @@
                                     <li><a href="/product">Product Details</a></li>
                                     <li><a href="/shopcart">Shop Cart</a></li>
                                     <li><a href="/checkout">Checkout</a></li>
-                                    <li><a href="/blogdetails">Blog Details</a></li>
+                                    <li><a href="/blog/:id">Blog Details</a></li>
                                 </ul>
                             </li>
                             <li><a href="./blog">Blog</a></li>
