--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -33,7 +33,7 @@
                             <a href="/register">Register</a>
                         </div>
                         <ul class="header__right__widget">
-                            <li><span class="icon_search search-switch"></span></li>
+                            <li><span class="x"></span></li>
                             <li><a href="#"><span class="icon_heart_alt"></span>
                                 <div class="tip">2</div>
                             </a></li>
