--- a/views/addNewProduct.hbs
+++ b/views/addNewProduct.hbs
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Edit Product - Dashboard Admin Template</title>
+    <title>Add Product - Dashboard HTML Template</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
@@ -116,12 +115,12 @@
           <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
             <div class="row">
               <div class="col-12">
-                <h2 class="tm-block-title d-inline-block">Edit Product</h2>
+                <h2 class="tm-block-title d-inline-block">Add Product</h2>
               </div>
             </div>
             <div class="row tm-edit-product-row">
               <div class="col-xl-6 col-lg-6 col-md-12">
-                <form action="" method="post" class="tm-edit-product-form">
+                <form action="" class="tm-edit-product-form">
                   <div class="form-group mb-3">
                     <label
                       for="name"
@@ -131,8 +130,8 @@
                       id="name"
                       name="name"
                       type="text"
-                      value="Lorem Ipsum Product"
                       class="form-control validate"
+                      required
                     />
                   </div>
                   <div class="form-group mb-3">
@@ -140,11 +139,11 @@
                       for="description"
                       >Description</label
                     >
-                    <textarea                    
-                      class="form-control validate tm-small"
-                      rows="5"
+                    <textarea
+                      class="form-control validate"
+                      rows="3"
                       required
-                    >Lorem ipsum dolor amet gentrify glossier locavore messenger bag chillwave hashtag irony migas wolf kale chips small batch kogi direct trade shaman.</textarea>
+                    ></textarea>
                   </div>
                   <div class="form-group mb-3">
                     <label
@@ -155,8 +154,8 @@
                       class="custom-select tm-select-accounts"
                       id="category"
                     >
-                      <option>Select category</option>
-                      <option value="1" selected>New Arrival</option>
+                      <option selected>Select category</option>
+                      <option value="1">New Arrival</option>
                       <option value="2">Most Popular</option>
                       <option value="3">Trending</option>
                     </select>
@@ -171,7 +170,6 @@
                             id="expire_date"
                             name="expire_date"
                             type="text"
-                            value="22 Oct, 2020"
                             class="form-control validate"
                             data-large-mode="true"
                           />
@@ -185,16 +183,15 @@
                             id="stock"
                             name="stock"
                             type="text"
-                            value="19,765"
                             class="form-control validate"
+                            required
                           />
                         </div>
                   </div>
                   
               </div>
               <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
-                <div class="tm-product-img-edit mx-auto">
-                  <img src="img/product-image.jpg" alt="Product image" class="img-fluid d-block mx-auto">
+                <div class="tm-product-img-dummy mx-auto">
                   <i
                     class="fas fa-cloud-upload-alt tm-upload-icon"
                     onclick="document.getElementById('fileInput').click();"
@@ -205,13 +202,13 @@
                   <input
                     type="button"
                     class="btn btn-primary btn-block mx-auto"
-                    value="CHANGE IMAGE NOW"
+                    value="UPLOAD PRODUCT IMAGE"
                     onclick="document.getElementById('fileInput').click();"
                   />
                 </div>
               </div>
               <div class="col-12">
-                <button type="submit" class="btn btn-primary btn-block text-uppercase">Update Now</button>
+                <button type="submit" class="btn btn-primary btn-block text-uppercase">Add Product Now</button>
               </div>
             </form>
             </div>
@@ -237,9 +234,7 @@
     <!-- https://getbootstrap.com/ -->
     <script>
       $(function() {
-        $("#expire_date").datepicker({
-          defaultDate: "10/22/2020"
-        });
+        $("#expire_date").datepicker();
       });
     </script>
   </body>
