--- a/views/addNewProduct.hbs
+++ b/views/addNewProduct.hbs
@@ -120,9 +120,9 @@
             </div>
             <div class="row tm-edit-product-row">
               <div class="col-xl-6 col-lg-6 col-md-12">
-                <form action="" class="tm-edit-product-form">
+                <form action="POST" class="tm-edit-product-form">
                   <div class="form-group mb-3">
-                    <label
+                    <label    
                       for="name"
                       >Product Name
                     </label>
