setup nameless things

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -10,15 +10,15 @@
                             <ul>
                                 <li>
                                     <h6><i class="fa fa-map-marker"></i> Address</h6>
-                                    <p>160 Pennsylvania Ave NW, Washington, Castle, PA 16101-5161</p>
+                                    <p>{{info.address}}</p>
                                 </li>
                                 <li>
                                     <h6><i class="fa fa-phone"></i> Phone</h6>
-                                    <p><span>125-711-811</span><span>125-668-886</span></p>
+                                    <p><span>{{info.phoneNumber}}</span></p>
                                 </li>
                                 <li>
                                     <h6><i class="fa fa-headphones"></i> Support</h6>
-                                    <p>Support.photography@gmail.com</p>
+                                    <p>{{info.email}}</p>
                                 </li>
                             </ul>
                         </div>
@@ -63,7 +63,7 @@
                 <div class="instagram__item set-bg" data-setbg="img/instagram/insta-2.jpg">
                     <div class="instagram__text">
                         <i class="fa fa-instagram"></i>
-                        <a href="#">@ ashion_shop</a>
+                        <a href="#">@ {{info.name}}</a>
                     </div>
                 </div>
             </div>
