--- a/views/addNewProduct.hbs
+++ b/views/addNewProduct.hbs
@@ -122,10 +122,7 @@
               <div class="col-xl-6 col-lg-6 col-md-12">
                 <form action="POST" class="tm-edit-product-form">
                   <div class="form-group mb-3">
-                    <label    
-                      for="name"
-                      >Product Name
-                    </label>
+                    <label for="name"> Product Name </label>
                     <input
                       id="name"
                       name="name"
@@ -136,52 +133,37 @@
                   </div>
                   <div class="form-group mb-3">
                     <label
-                      for="description"
-                      >Description</label
-                    >
+                      for="description">Description</label>
                     <textarea
                       class="form-control validate"
                       rows="3"
+                      id ="description"
+                      name="description"
                       required
                     ></textarea>
                   </div>
                   <div class="form-group mb-3">
-                    <label
-                      for="category"
-                      >Category</label
-                    >
+                    <label for="category">Category</label>
                     <select
                       class="custom-select tm-select-accounts"
-                      id="category"
+                      id="category" 
+                      name="category"
                     >
-                      <option selected>Select category</option>
+                      <option selected >Select category</option>
                       <option value="1">New Arrival</option>
                       <option value="2">Most Popular</option>
                       <option value="3">Trending</option>
                     </select>
                   </div>
                   <div class="row">
-                      <div class="form-group mb-3 col-xs-12 col-sm-6">
-                          <label
-                            for="expire_date"
-                            >Expire Date
-                          </label>
-                          <input
-                            id="expire_date"
-                            name="expire_date"
-                            type="text"
-                            class="form-control validate"
-                            data-large-mode="true"
-                          />
-                        </div>
                         <div class="form-group mb-3 col-xs-12 col-sm-6">
                           <label
-                            for="stock"
-                            >Units In Stock
+                            for="availability"
+                            >Availability
                           </label>
                           <input
-                            id="stock"
-                            name="stock"
+                            id="availability"
+                            name="availability"
                             type="text"
                             class="form-control validate"
                             required
@@ -218,9 +200,7 @@
     </div>
     <footer class="tm-footer row tm-mt-small">
         <div class="col-12 font-weight-light">
-          <p class="text-center text-white mb-0 px-4 small">
-            Copyright &copy; <b>2018</b> All rights reserved. 
-            
+          <p class="text-center text-white mb-0 px-4 small">  
             Design: <a rel="nofollow noopener" href="https://templatemo.com" class="tm-footer-link">Template Mo</a>
         </p>
         </div>
@@ -233,9 +213,6 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- https://getbootstrap.com/ -->
     <script>
-      $(function() {
-        $("#expire_date").datepicker();
-      });
     </script>
   </body>
 </html>
