post method for add a new product

--- a/views/addNewProduct.hbs
+++ b/views/addNewProduct.hbs
@@ -120,7 +120,7 @@
             </div>
             <div class="row tm-edit-product-row">
               <div class="col-xl-6 col-lg-6 col-md-12">
-                <form action="POST" class="tm-edit-product-form">
+                <form method="POST" action= "/product/save" class="tm-edit-product-form">
                   <div class="form-group mb-3">
                     <label for="name"> Product Name </label>
                     <input
@@ -153,6 +153,18 @@
                       <option value="1">New Arrival</option>
                       <option value="2">Most Popular</option>
                       <option value="3">Trending</option>
+                    </select>
+                  </div>
+                  <div class="form-group mb-3">
+                    <label for="gender">For</label>
+                    <select
+                      class="custom-select tm-select-accounts"
+                      id="gender" 
+                      name="gender"
+                    >
+                      <option value="1">Men</option>
+                      <option value="2">Women</option>
+                      <option value="3">Unisex</option>
                     </select>
                   </div>
                   <div class="row">
