--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto h-100">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">
+              <a class="nav-link" href="/">
                 <i class="fas fa-tachometer-alt"></i> Dashboard
                 <span class="sr-only">(current)</span>
               </a>
@@ -69,13 +69,13 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="products.html">
+              <a class="nav-link active" href="/admin/products">
                 <i class="fas fa-shopping-cart"></i> Products
               </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="accounts.html">
+              <a class="nav-link" href="admin/accounts">
                 <i class="far fa-user"></i> Accounts
               </a>
             </li>
@@ -109,7 +109,8 @@
         </div>
       </div>
     </nav>
-    {{body}}
+
+    {{{body}}}
 
     <script src="/js/jquery-3.3.1.min.js"></script>
     <!-- https://jquery.com/download/ -->
