add order feature and fine tuning

--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -19,7 +19,7 @@
                   {{#each product}}
                   <tr>
                     <th scope="row"><input type="checkbox" /></th>
-                    <td class="tm-product-name">{{this.name}}</td>
+                    <td class="tm-product-name"><a href="">{{this.name}}</a></td>
                     <td>{{this.quantity}}</td>
                     <td>{{this.availability}}</td>
                     <td>
