--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -15,9 +15,8 @@
                             <li class="active"><a href="/shop">Shop</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
-                                    <li><a href="/product">Product Details</a></li>
-                                    <li><a href="/shopcart">Shop Cart</a></li>
-                                    <li><a href="/checkout">Checkout</a></li>
+                                    <li><a href="/order/shopcart">Shop Cart</a></li>
+                                    <li><a href="/order/checkout">Checkout</a></li>
                                     <li><a href="/blog/:id">Blog Details</a></li>
                                 </ul>
                             </li>
@@ -37,7 +36,7 @@
                             <li><a href="#"><span class="icon_heart_alt"></span>
                                 <div class="tip">2</div>
                             </a></li>
-                            <li><a href="#"><span class="icon_bag_alt"></span>
+                            <li><a href="order/checkout"><span class="icon_bag_alt"></span>
                                 <div class="tip">2</div>
                             </a></li>
                         </ul>
