--- a/views/blog-details.hbs
+++ b/views/blog-details.hbs
@@ -5,7 +5,7 @@
                 <div class="col-lg-8 col-md-8">
                     <div class="blog__details__content">
                         <div class="blog__details__item">
-                            <img src="img/blog/details/blog-details.jpg" alt="">
+                            <img src="/img/blog/details/blog-details.jpg" alt="">
                             <div class="blog__details__item__title">
                                 <span class="tip">Street style</span>
                                 <h4>Being seen: how is age diversity effecting change in fashion and beauty?</h4>
@@ -64,7 +64,7 @@
                             <a href="#" class="leave-btn">Leave a comment</a>
                             <div class="blog__comment__item">
                                 <div class="blog__comment__item__pic">
-                                    <img src="img/blog/details/comment-1.jpg" alt="">
+                                    <img src="/img/blog/details/comment-1.jpg" alt="">
                                 </div>
                                 <div class="blog__comment__item__text">
                                     <h6>Brandon Kelley</h6>
@@ -79,7 +79,7 @@
                             </div>
                             <div class="blog__comment__item blog__comment__item--reply">
                                 <div class="blog__comment__item__pic">
-                                    <img src="img/blog/details/comment-2.jpg" alt="">
+                                    <img src="/img/blog/details/comment-2.jpg" alt="">
                                 </div>
                                 <div class="blog__comment__item__text">
                                     <h6>Brandon Kelley</h6>
@@ -94,7 +94,7 @@
                             </div>
                             <div class="blog__comment__item">
                                 <div class="blog__comment__item__pic">
-                                    <img src="img/blog/details/comment-3.jpg" alt="">
+                                    <img src="/img/blog/details/comment-3.jpg" alt="">
                                 </div>
                                 <div class="blog__comment__item__text">
                                     <h6>Brandon Kelley</h6>
@@ -130,7 +130,7 @@
                             </div>
                             <a href="#" class="blog__feature__item">
                                 <div class="blog__feature__item__pic">
-                                    <img src="img/blog/sidebar/fp-1.jpg" alt="">
+                                    <img src="/img/blog/sidebar/fp-1.jpg" alt="">
                                 </div>
                                 <div class="blog__feature__item__text">
                                     <h6>Amf Cannes Red Carpet Celebrities Kend...</h6>
@@ -139,7 +139,7 @@
                             </a>
                             <a href="#" class="blog__feature__item">
                                 <div class="blog__feature__item__pic">
-                                    <img src="img/blog/sidebar/fp-2.jpg" alt="">
+                                    <img src="/img/blog/sidebar/fp-2.jpg" alt="">
                                 </div>
                                 <div class="blog__feature__item__text">
                                     <h6>Amf Cannes Red Carpet Celebrities Kend...</h6>
@@ -148,7 +148,7 @@
                             </a>
                             <a href="#" class="blog__feature__item">
                                 <div class="blog__feature__item__pic">
-                                    <img src="img/blog/sidebar/fp-3.jpg" alt="">
+                                    <img src="/img/blog/sidebar/fp-3.jpg" alt="">
                                 </div>
                                 <div class="blog__feature__item__text">
                                     <h6>Amf Cannes Red Carpet Celebrities Kend...</h6>
@@ -179,7 +179,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-2 col-md-4 col-sm-4 col-md-6 col-sm-6 p-0">
-                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-1.jpg">
+                    <div class="instagram__item set-bg" data-setbg="/img/instagram/insta-1.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -187,7 +187,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 col-md-6 col-sm-6 p-0">
-                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-2.jpg">
+                    <div class="instagram__item set-bg" data-setbg="/img/instagram/insta-2.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 col-md-6 col-sm-6 p-0">
-                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-3.jpg">
+                    <div class="instagram__item set-bg" data-setbg="/img/instagram/insta-3.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -203,7 +203,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 col-md-6 col-sm-6 p-0">
-                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-4.jpg">
+                    <div class="instagram__item set-bg" data-setbg="/img/instagram/insta-4.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 col-md-6 col-sm-6 p-0">
-                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-5.jpg">
+                    <div class="instagram__item set-bg" data-setbg="/img/instagram/insta-5.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -219,7 +219,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 col-md-6 col-sm-6 p-0">
-                    <div class="instagram__item set-bg" data-setbg="img/instagram/insta-6.jpg">
+                    <div class="instagram__item set-bg" data-setbg="/img/instagram/insta-6.jpg">
                         <div class="instagram__text">
                             <i class="fa fa-instagram"></i>
                             <a href="#">@ ashion_shop</a>
@@ -238,16 +238,16 @@
                 <div class="col-lg-4 col-md-6 col-sm-7">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                            <a href="./index.html"><img src="/img/logo.png" alt=""></a>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                         cilisis.</p>
                         <div class="footer__payment">
-                            <a href="#"><img src="img/payment/payment-1.png" alt=""></a>
-                            <a href="#"><img src="img/payment/payment-2.png" alt=""></a>
-                            <a href="#"><img src="img/payment/payment-3.png" alt=""></a>
-                            <a href="#"><img src="img/payment/payment-4.png" alt=""></a>
-                            <a href="#"><img src="img/payment/payment-5.png" alt=""></a>
+                            <a href="#"><img src="/img/payment/payment-1.png" alt=""></a>
+                            <a href="#"><img src="/img/payment/payment-2.png" alt=""></a>
+                            <a href="#"><img src="/img/payment/payment-3.png" alt=""></a>
+                            <a href="#"><img src="/img/payment/payment-4.png" alt=""></a>
+                            <a href="#"><img src="/img/payment/payment-5.png" alt=""></a>
                         </div>
                     </div>
                 </div>
