completing edit feature

--- a/views/admin/editProduct.hbs
+++ b/views/admin/editProduct.hbs
@@ -10,7 +10,7 @@
             </div>
             <div class="row tm-edit-product-row">
               <div class="col-xl-6 col-lg-6 col-md-12">
-                <form action="/product/save" method="post" class="tm-edit-product-form">
+                <form action="/product/save/{{product._id}}" method="PUT" class="tm-edit-product-form">
                   <div class="form-group mb-3">
                     <label
                       for="name"
