update product completed

--- a/views/admin/addNewProduct.hbs
+++ b/views/admin/addNewProduct.hbs
@@ -10,7 +10,7 @@
             </div>
             <div class="row tm-edit-product-row">
               <div class="col-xl-6 col-lg-6 col-md-12">
-                <form method="POST" action= "/product/save" class="tm-edit-product-form">
+                <form method="POST" action= "/products/save" class="tm-edit-product-form">
                   <div class="form-group mb-3">
                     <label for="name"> Product Name </label>
                     <input
