--- a/views/admin/editProduct.hbs
+++ b/views/admin/editProduct.hbs
@@ -1,103 +1,121 @@
-
-    <div class="container tm-mt-big tm-mb-big">
-      <div class="row">
-        <div class="col-xl-9 col-lg-10 col-md-12 col-sm-12 mx-auto">
-          <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
-            <div class="row">
-              <div class="col-12">
-                <h2 class="tm-block-title d-inline-block">Edit Product</h2>
+<div class="container tm-mt-big tm-mb-big">
+  <div class="row">
+    <div class="col-xl-9 col-lg-10 col-md-12 col-sm-12 mx-auto">
+      <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="tm-block-title d-inline-block">Edit Product</h2>
+          </div>
+        </div>
+        <div class="row tm-edit-product-row">
+          <div class="col-xl-6 col-lg-6 col-md-12">
+            <form action="/admin/save/62f202e03ae6efa0b9290cfc?_method=PUT" method="POST" class="tm-edit-product-form">
+              <div class="form-group mb-3">
+                <label
+                  for="name"
+                  >Product Name
+                </label>
+                <input
+                  id="name"
+                  name="name"
+                  type="text"
+                  value="{{product.name}}"
+                  class="form-control validate"
+                />
               </div>
+              <div class="form-group mb-3">
+                <label
+                  for="brand"
+                  >Brand
+                </label>
+                <input
+                  id="brand"
+                  name="brand"
+                  type="text"
+                  value="{{product.brand}}"
+                  class="form-control validate"
+                />
+              </div>
+              <div class="form-group mb-3">
+                <label
+                  for="price"
+                  >Price
+                </label>
+                <input
+                  id="price"
+                  name="price"
+                  type="text"
+                  value="{{product.price}}"
+                  class="form-control validate"
+                />
+              </div>
+              <div class="form-group mb-3">
+                <label
+                  for="description"
+                  >Description</label
+                >
+                <textarea                    
+                  class="form-control validate tm-small"
+                  rows="5"
+                  required
+                >{{product.description}}</textarea>
+              </div>
+              <div class="form-group mb-3">
+                <label
+                  for="category"
+                  >Category</label
+                >
+                <select
+                  class="custom-select tm-select-accounts"
+                  id="category"
+                >
+                  <option>Select category</option>
+                  <option value="1" selected>New Arrival</option>
+                  <option value="2">Most Popular</option>
+                  <option value="3">Trending</option>
+                </select>
+              </div>
+              <div class="row">
+                    <div class="form-group mb-3 col-xs-12 col-sm-6">
+                      <label
+                        for="stock"
+                        >Units In Stock
+                      </label>
+                      <input
+                        id="stock"
+                        name="stock"
+                        type="text"
+                        value="{{product.availability}}"
+                        class="form-control validate"
+                      />
+                    </div>
+              </div>
+              
+          </div>
+          <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
+            <div class="tm-product-img-edit mx-auto">
+              <img src="/img/product-image.jpg" alt="Product image" class="img-fluid d-block mx-auto">
+              <i
+                class="fas fa-cloud-upload-alt tm-upload-icon"
+                onclick="document.getElementById('fileInput').click();"
+              ></i>
             </div>
-            <div class="row tm-edit-product-row">
-              <div class="col-xl-6 col-lg-6 col-md-12">
-                <form action="/product/save/{{product._id}}" method="PUT" class="tm-edit-product-form">
-                  <div class="form-group mb-3">
-                    <label
-                      for="name"
-                      >Product Name
-                    </label>
-                    <input
-                      id="name"
-                      name="name"
-                      type="text"
-                      value="{{product.name}}"
-                      class="form-control validate"
-                    />
-                  </div>
-                  <div class="form-group mb-3">
-                    <label
-                      for="brand"
-                      >Brand
-                    </label>
-                    <input
-                      id="brand"
-                      name="brand"
-                      type="text"
-                      value="{{product.brand}}"
-                      class="form-control validate"
-                    />
-                  </div>
-                  <div class="form-group mb-3">
-                    <label
-                      for="description"
-                      >Description</label
-                    >
-                    <textarea                    
-                      class="form-control validate tm-small"
-                      rows="5"
-                      required
-                    >{{product.description}}</textarea>
-                  </div>
-                  <div class="form-group mb-3">
-                    <label for="category"> Category </label>
-                    <select class="custom-select tm-select-accounts" id="category">
-                      <option>Select category</option>
-                      <option value="1" selected>New Arrival</option>
-                      <option value="2">Most Popular</option>
-                      <option value="3">Trending</option>
-                    </select>
-                  </div>
-                  <div class="row">
-                        <div class="form-group mb-3 col-xs-12 col-sm-6">
-                          <label
-                            for="stock"
-                            >Units In Stock
-                          </label>
-                          <input
-                            id="stock"
-                            name="stock"
-                            type="text"
-                            value="{{product.availability}}"
-                            class="form-control validate"
-                          />
-                        </div>
-                  </div>
-              </div>
-              <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
-                <div class="tm-product-img-edit mx-auto">
-                  <img src="/img/product-image.jpg" alt="Product image" class="img-fluid d-block mx-auto">
-                  <i
-                    class="fas fa-cloud-upload-alt tm-upload-icon"
-                    onclick="document.getElementById('fileInput').click();"
-                  ></i>
-                </div>
-                <div class="custom-file mt-3 mb-3">
-                  <input id="fileInput" type="file" style="display:none;" />
-                  <input
-                    type="button"
-                    class="btn btn-primary btn-block mx-auto"
-                    value="CHANGE IMAGE NOW"
-                    onclick="document.getElementById('fileInput').click();"
-                  />
-                </div>
-              </div>
-              <div class="col-12">
-                <button type="submit" class="btn btn-primary btn-block text-uppercase">Update Now</button>
-              </div>
-            </form>
+            <div class="custom-file mt-3 mb-3">
+              <input id="fileInput" type="file" style="display:none;" />
+              <input
+                type="button"
+                class="btn btn-primary btn-block mx-auto"
+                value="CHANGE IMAGE NOW"
+                onclick="document.getElementById('fileInput').click();"
+              />
             </div>
           </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary btn-block text-uppercase">Update Now</button>
+          </div>
+        </form>
         </div>
       </div>
     </div>
-
+  </div>
+</div>
