--- a/public/sass/_breadcrumb.scss
+++ b/public/sass/_breadcrumb.scss
@@ -2,36 +2,35 @@
   Breadcrumb
 -----------------------*/
 .breadcrumb-option {
-    padding-top: 35px;
+  padding-top: 35px;
 }
 
 .breadcrumb__links {
+  a {
+    font-size: 15px;
+    font-weight: 500;
+    color: $heading-color;
+    margin-right: 18px;
+    display: inline-block;
+    position: relative;
 
-    a {
-        font-size: 15px;
-        font-weight: 500;
-        color: $heading-color;
-        margin-right: 18px;
-        display: inline-block;
-        position: relative;
-
-        &:after {
-            position: absolute;
-            right: -14px;
-            top: 0;
-            content: '\f105';
-            font-family: "FontAwesome";
-        }
-
-        i {
-            margin-right: 5px;
-        }
+    &:after {
+      position: absolute;
+      right: -14px;
+      top: 0;
+      content: "\f105";
+      font-family: "FontAwesome";
     }
 
-    span {
-        font-size: 15px;
-        font-weight: 500;
-        color: #888888;
-        display: inline-block;
+    i {
+      margin-right: 5px;
     }
+  }
+
+  span {
+    font-size: 15px;
+    font-weight: 500;
+    color: #888888;
+    display: inline-block;
+  }
 }
