--- a/public/sass/_base.scss
+++ b/public/sass/_base.scss
@@ -31,7 +31,7 @@ Created: Colorib
 html,
 body {
   height: 100%;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -44,7 +44,7 @@ h6 {
   margin: 0;
   color: #111111;
   font-weight: 400;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1 {
@@ -73,7 +73,7 @@ h6 {
 
 p {
   font-size: 14px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #666666;
   font-weight: 400;
   line-height: 24px;
