--- a/views/admin/addNewProduct.hbs
+++ b/views/admin/addNewProduct.hbs
@@ -10,12 +10,32 @@
             </div>
             <div class="row tm-edit-product-row">
               <div class="col-xl-6 col-lg-6 col-md-12">
-                <form method="POST" action= "/products/save" class="tm-edit-product-form">
+                <form method="POST" action= "save" class="tm-edit-product-form">
                   <div class="form-group mb-3">
                     <label for="name"> Product Name </label>
                     <input
                       id="name"
                       name="name"
+                      type="text"
+                      class="form-control validate"
+                      required
+                    />
+                  </div>
+                  <div class="form-group mb-3">
+                    <label for="brand"> Brand </label>
+                    <input
+                      id="brand"
+                      name="brand"
+                      type="text"
+                      class="form-control validate"
+                      required
+                    />
+                  </div>
+                  <div class="form-group mb-3">
+                    <label for="price"> Price </label>
+                    <input
+                      id="price"
+                      name="price"
                       type="text"
                       class="form-control validate"
                       required
@@ -100,10 +120,3 @@
         </div>
       </div>
     </div>
-    <footer class="tm-footer row tm-mt-small">
-        <div class="col-12 font-weight-light">
-          <p class="text-center text-white mb-0 px-4 small">  
-            Design: <a rel="nofollow noopener" href="https://templatemo.com" class="tm-footer-link">Template Mo</a>
-        </p>
-        </div>
-    </footer> 
