--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,15 +11,25 @@
     <!-- https://fonts.google.com/specimen/Roboto -->
     <link rel="stylesheet" href="/css/fontawesome.min.css" />
     <!-- https://fontawesome.com/ -->
-    <link rel="stylesheet" href="/jquery-ui-datepicker/jquery-ui.min.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="/jquery-ui-datepicker/jquery-ui.min.css"
+      type="text/css"
+    />
     <!-- http://api.jqueryui.com/datepicker/ -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <!-- https://getbootstrap.com/ -->
-    <link rel="stylesheet" href="/css/templatemo-style.css">
+    <link rel="stylesheet" href="/css/templatemo-style.css" />
     <!--
 	Product Admin CSS Template
 	https://templatemo.com/tm-524-product-admin
 	-->
+    <script src="/js/jquery-3.3.1.min.js"></script>
+    <!-- https://jquery.com/download/ -->
+    <script src="/jquery-ui-datepicker/jquery-ui.min.js"></script>
+    <!-- https://jqueryui.com/download/ -->
+    <script src="/js/bootstrap.min.js"></script>
+    <!-- https://getbootstrap.com/ -->
   </head>
 
   <body>
@@ -45,7 +54,8 @@
           <ul class="navbar-nav mx-auto h-100">
             <li class="nav-item">
               <a class="nav-link" href="/">
-                <i class="fas fa-tachometer-alt"></i> Dashboard
+                <i class="fas fa-tachometer-alt"></i>
+                Dashboard
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -70,13 +80,15 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/admin/products">
-                <i class="fas fa-shopping-cart"></i> Products
+                <i class="fas fa-shopping-cart"></i>
+                Products
               </a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link" href="admin/accounts">
-                <i class="far fa-user"></i> Accounts
+                <i class="far fa-user"></i>
+                Accounts
               </a>
             </li>
             <li class="nav-item dropdown">
@@ -102,7 +114,8 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link d-block" href="login.html">
-                Admin, <b>Logout</b>
+                Admin,
+                <b>Logout</b>
               </a>
             </li>
           </ul>
@@ -112,13 +125,6 @@
 
     {{{body}}}
 
-    <script src="/js/jquery-3.3.1.min.js"></script>
-    <!-- https://jquery.com/download/ -->
-    <script src="/jquery-ui-datepicker/jquery-ui.min.js"></script>
-    <!-- https://jqueryui.com/download/ -->
-    <script src="/js/bootstrap.min.js"></script>
-    <!-- https://getbootstrap.com/ -->
-    
     <script>
     </script>
   </body>
