--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,51 +1,51 @@
- <header class="header">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xl-3 col-lg-2">
-                    <div class="header__logo">
-                        <a href="/"><img src="/img/logo.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-7">
-                    <nav class="header__menu">
-                        <ul>
-                            <li><a href="/">Home</a></li>
-                            <li><a href="#">Women’s</a></li>
-                            <li><a href="#">Men’s</a></li>
-                            <li class="active"><a href="/shop">Shop</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="/order/shopcart">Shop Cart</a></li>
-                                    <li><a href="/order/checkout">Checkout</a></li>
-                                    <li><a href="/blog/:id">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="/blog">Blog</a></li>
-                            <li><a href="/contact">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-lg-3">
-                    <div class="header__right">
-                        <div class="header__right__auth">
-                            <a href="/login">Login</a>
-                            <a href="/register">Register</a>
-                        </div>
-                        <ul class="header__right__widget">
-                            <li><span class="x"></span></li>
-                            <li><a href="#"><span class="icon_heart_alt"></span>
-                                <div class="tip">2</div>
-                            </a></li>
-                            <li><a href="order/checkout"><span class="icon_bag_alt"></span>
-                                <div class="tip">2</div>
-                            </a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="canvas__open">
-                <i class="fa fa-bars"></i>
-            </div>
+<header class="header">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xl-3 col-lg-2">
+        <div class="header__logo">
+          <a href="/"><img src="/img/logo.png" alt="" /></a>
         </div>
-    </header>
-    <!-- Header Section End -->
+      </div>
+      <div class="col-xl-6 col-lg-7">
+        <nav class="header__menu">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="#">Women’s</a></li>
+            <li><a href="#">Men’s</a></li>
+            <li class="active"><a href="/shop">Shop</a></li>
+            <li><a href="#">Pages</a>
+              <ul class="dropdown">
+                <li><a href="/order/shopcart">Shop Cart</a></li>
+                <li><a href="/order/checkout">Checkout</a></li>
+                <li><a href="/blog/:id">Blog Details</a></li>
+              </ul>
+            </li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-lg-3">
+        <div class="header__right">
+          <div class="header__right__auth">
+            <a href="/login">Login</a>
+            <a href="/register">Register</a>
+          </div>
+          <ul class="header__right__widget">
+            <li><span class="x"></span></li>
+            <li><a href="#"><span class="icon_heart_alt"></span>
+                <div class="tip">2</div>
+              </a></li>
+            <li><a href="order/checkout"><span class="icon_bag_alt"></span>
+                <div class="tip">2</div>
+              </a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="canvas__open">
+      <i class="fa fa-bars"></i>
+    </div>
+  </div>
+</header>
+<!-- Header Section End -->
