--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,10 +1,16 @@
 <form method="GET" action="">
-    <div class="wrap">
+  <div class="wrap">
     <div class="form-group">
-        <input type="text" name="q" id="search-input" class="searchTerm" placeholder="What are you looking for?">
-        <button type="submit" class="btn btn-primary">
-            <i class="fa fa-search"></i>
-        </button>
+      <input
+        type="text"
+        name="q"
+        id="search-input"
+        class="searchTerm"
+        placeholder="What are you looking for?"
+      />
+      <button type="submit" class="btn btn-primary">
+        <i class="fa fa-search"></i>
+      </button>
     </div>
-    </div>
+  </div>
 </form>
