--- a/views/admin/editProduct.hbs
+++ b/views/admin/editProduct.hbs
@@ -9,7 +9,7 @@
         </div>
         <div class="row tm-edit-product-row">
           <div class="col-xl-6 col-lg-6 col-md-12">
-            <form action="/admin/save/62f202e03ae6efa0b9290cfc?_method=PUT" method="POST" class="tm-edit-product-form">
+            <form action="/admin/save/{{product._id}}?_method=PUT" method="POST" class="tm-edit-product-form">
               <div class="form-group mb-3">
                 <label
                   for="name"
@@ -89,30 +89,29 @@
                         class="form-control validate"
                       />
                     </div>
+              </div>   
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
+              <div class="tm-product-img-edit mx-auto">
+                <img src="/img/product-image.jpg" alt="Product image" class="img-fluid d-block mx-auto">
+                <i
+                  class="fas fa-cloud-upload-alt tm-upload-icon"
+                  onclick="document.getElementById('fileInput').click();"
+                ></i>
               </div>
-              
-          </div>
-          <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
-            <div class="tm-product-img-edit mx-auto">
-              <img src="/img/product-image.jpg" alt="Product image" class="img-fluid d-block mx-auto">
-              <i
-                class="fas fa-cloud-upload-alt tm-upload-icon"
-                onclick="document.getElementById('fileInput').click();"
-              ></i>
+              <div class="custom-file mt-3 mb-3">
+                <input id="fileInput" type="file" style="display:none;" />
+                <input
+                  type="button"
+                  class="btn btn-primary btn-block mx-auto"
+                  value="CHANGE IMAGE NOW"
+                  onclick="document.getElementById('fileInput').click();"
+                />
+              </div>
             </div>
-            <div class="custom-file mt-3 mb-3">
-              <input id="fileInput" type="file" style="display:none;" />
-              <input
-                type="button"
-                class="btn btn-primary btn-block mx-auto"
-                value="CHANGE IMAGE NOW"
-                onclick="document.getElementById('fileInput').click();"
-              />
+            <div class="col-12">
+              <button type="submit" class="btn btn-primary btn-block text-uppercase">Update Now</button>
             </div>
-          </div>
-          <div class="col-12">
-            <button type="submit" class="btn btn-primary btn-block text-uppercase">Update Now</button>
-          </div>
         </form>
         </div>
       </div>
