--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -24,18 +24,13 @@
 	Product Admin CSS Template
 	https://templatemo.com/tm-524-product-admin
 	-->
-    <script src="/js/jquery-3.3.1.min.js"></script>
-    <!-- https://jquery.com/download/ -->
-    <script src="/jquery-ui-datepicker/jquery-ui.min.js"></script>
-    <!-- https://jqueryui.com/download/ -->
-    <script src="/js/bootstrap.min.js"></script>
-    <!-- https://getbootstrap.com/ -->
+
   </head>
 
   <body>
     <nav class="navbar navbar-expand-xl">
       <div class="container h-100">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/admin">
           <h1 class="tm-site-title mb-0">Product Admin</h1>
         </a>
         <button
@@ -53,7 +48,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto h-100">
             <li class="nav-item">
-              <a class="nav-link" href="/">
+              <a class="nav-link" href="/admin">
                 <i class="fas fa-tachometer-alt"></i>
                 Dashboard
                 <span class="sr-only">(current)</span>
@@ -125,7 +120,11 @@
 
     {{{body}}}
 
-    <script>
-    </script>
+    <script src="/js/jquery-3.3.1.min.js"></script>
+    <!-- https://jquery.com/download/ -->
+    <script src="/jquery-ui-datepicker/jquery-ui.min.js"></script>
+    <!-- https://jqueryui.com/download/ -->
+    <script src="/js/bootstrap.min.js"></script>
+    <!-- https://getbootstrap.com/ -->
   </body>
 </html>
