--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -22,6 +22,8 @@
             </li>
             <li><a href="/blog">Blog</a></li>
             <li><a href="/contact">Contact</a></li>
+            <li><a href="/admin">Admin</a></li>
+
           </ul>
         </nav>
       </div>
