--- a/views/shop.hbs
+++ b/views/shop.hbs
@@ -252,13 +252,13 @@
             <div class="col-lg-4 col-md-6">
               <div class="product__item">
                 <div
-                  href="/product/{{this.id}}"
+                  href="/product/{{this._id}}"
                   class="product__item__pic set-bg"
-                  data-setbg="/img/shop/shop-1.jpg"
+                  data-setbg="/{{this.imageLink}}"
                 >
                   <div class="label new">New</div>
                   <ul class="product__hover">
-                    <li><a href="/img/shop/shop-1.jpg" class="image-popup"><span
+                    <li><a href="/{{this.imageLink}}" class="image-popup"><span
                           class="arrow_expand"
                         ></span></a></li>
                     <li><a href="#"><span
