--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,28 +2,45 @@
   <div class="container py-5 h-100">
     <div class="row d-flex align-items-center justify-content-center h-100">
       <div class="col-md-8 col-lg-7 col-xl-6">
-        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
-          class="img-fluid" alt="Phone image">
+        <img
+          src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
+          class="img-fluid"
+          alt="Phone image"
+        />
       </div>
       <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
         <form>
           <!-- Email input -->
           <div class="form-outline mb-4">
-            <label class="form-label" for="form1Example13">Email address</label>
-            <input type="email" id="form1Example13" class="form-control form-control-lg" />
+            <label class="form-label" for="email">Email address</label>
+            <input
+              type="email"
+              id="email"
+              class="form-control form-control-lg"
+            />
           </div>
 
           <!-- Password input -->
           <div class="form-outline mb-4">
-            <label class="form-label" for="form1Example23">Password</label>
-            <input type="password" id="form1Example23" class="form-control form-control-lg" />
+            <label class="form-label" for="password">Password</label>
+            <input
+              type="password"
+              id="password"
+              class="form-control form-control-lg"
+            />
           </div>
 
           <div class="d-flex justify-content-around align-items-center mb-4">
             <!-- Checkbox -->
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
-              <label class="form-check-label" for="form1Example3"> Remember me </label>
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="check"
+                checked
+              />
+              <label class="form-check-label" for="check"> Remember me </label>
             </div>
             <a href="#!">Forgot password?</a>
           </div>
@@ -35,12 +52,20 @@
             <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
           </div>
 
-          <a class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998" href="#!"
-            role="button">
+          <a
+            class="btn btn-primary btn-lg btn-block"
+            style="background-color: #3b5998"
+            href="#!"
+            role="button"
+          >
             <i class="fab fa-facebook-f me-2"></i>Continue with Facebook
           </a>
-          <a class="btn btn-primary btn-lg btn-block" style="background-color: #55acee" href="#!"
-            role="button">
+          <a
+            class="btn btn-primary btn-lg btn-block"
+            style="background-color: #55acee"
+            href="#!"
+            role="button"
+          >
             <i class="fab fa-twitter me-2"></i>Continue with Twitter</a>
 
         </form>
