--- a/views/register.hbs
+++ b/views/register.hbs
@@ -10,46 +10,44 @@
             <div class="card-body p-5">
               <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-              <form method="POST" action="">
-
-                <div class="form-outline mb-4">
-                  <label class="form-label" for="form3Example1cg">Your Name</label>
-
+              <form method="POST" action="/register/save">
+                  <div class="form-outline mb-4">
+                  <label class="form-label" for="name">Your name</label>
                   <input
                     type="text"
-                    id="form3Example1cg"
+                    id="name"
+                    name="name"
                     class="form-control form-control-lg"
                   />
                 </div>
 
+
                 <div class="form-outline mb-4">
-                  <label class="form-label" for="form3Example3cg">Your Email</label>
+                  <label class="form-label" for="username">Username</label>
                   <input
-                    type="email"
-                    id="form3Example3cg"
+                    type="text"
+                    id="username"
+                    name="username"
                     class="form-control form-control-lg"
                   />
                 </div>
 
                 <div class="form-outline mb-4">
-                  <label
-                    class="form-label"
-                    for="form3Example4cg"
-                  >Password</label>
-                  <input
-                    type="password"
-                    id="form3Example4cg"
-                    class="form-control form-control-lg"
-                  />
-
-                </div>
-
-                <div class="form-outline mb-4">
-                  <label class="form-label" for="form3Example4cdg">Repeat your
-                    password</label>
+                  <label class="form-label" for="password">Password</label>
                   <input
                     type="password"
-                    name="pass"
+                    name="password"
+                    id="password"
+                    class="form-control form-control-lg"
+                  />
+
+                </div>
+
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="password">Repeat your password</label>
+                  <input
+                    type="password"
+                    name="password_2"
                     id="form3Example4cdg"
                     class="form-control form-control-lg"
                   />
@@ -60,9 +58,9 @@
                     class="form-check-input me-2"
                     type="checkbox"
                     value=""
-                    id="form2Example3cg"
+                    id="checkbox"
                   />
-                 <label class="form-check-label" for="form2Example3g">
+                  <label class="form-check-label" for="check">
                     I agree all statements in
                     <a href="#!" class="text-body"><u>Terms of service</u></a>
                   </label>
