--- a/views/admin/addNewProduct.hbs
+++ b/views/admin/addNewProduct.hbs
@@ -72,9 +72,9 @@
                   id="gender" 
                   name="gender"
                 >
-                  <option value="1">Men</option>
-                  <option value="2">Women</option>
-                  <option value="3">Unisex</option>
+                  <option value="men">Men</option>
+                  <option value="women">Women</option>
+                  <option value="unisex">Unisex</option>
                 </select>
               </div>
               <div class="row">
