--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,8 +10,8 @@
         <nav class="header__menu">
           <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="#">Women’s</a></li>
-            <li><a href="#">Men’s</a></li>
+            <li><a href="/women">Women’s</a></li>
+            <li><a href="/men">Men’s</a></li>
             <li class="active"><a href="/shop">Shop</a></li>
             <li><a href="#">Pages</a>
               <ul class="dropdown">
@@ -27,6 +27,7 @@
           </ul>
         </nav>
       </div>
+          
       <div class="col-lg-3">
         <div class="header__right">
           <div class="header__right__auth">
