--- a/views/shop.hbs
+++ b/views/shop.hbs
@@ -24,12 +24,9 @@
                   >
                     <div class="card-body">
                       <ul>
-                        <li><a href="#">Coats</a></li>
-                        <li><a href="#">Jackets</a></li>
-                        <li><a href="#">Dresses</a></li>
-                        <li><a href="#">Shirts</a></li>
-                        <li><a href="#">T-shirts</a></li>
-                        <li><a href="#">Jeans</a></li>
+                        {{#each category}}
+                        <li><a href="#">{{this.category}}</a></li>
+                        {{/each}}
                       </ul>
                     </div>
                   </div>
@@ -40,78 +37,6 @@
                   </div>
                   <div
                     id="collapseTwo"
-                    class="collapse"
-                    data-parent="#accordionExample"
-                  >
-                    <div class="card-body">
-                      <ul>
-                        <li><a href="#">Coats</a></li>
-                        <li><a href="#">Jackets</a></li>
-                        <li><a href="#">Dresses</a></li>
-                        <li><a href="#">Shirts</a></li>
-                        <li><a href="#">T-shirts</a></li>
-                        <li><a href="#">Jeans</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-heading">
-                    <a
-                      data-toggle="collapse"
-                      data-target="#collapseThree"
-                    >Kids</a>
-                  </div>
-                  <div
-                    id="collapseThree"
-                    class="collapse"
-                    data-parent="#accordionExample"
-                  >
-                    <div class="card-body">
-                      <ul>
-                        <li><a href="#">Coats</a></li>
-                        <li><a href="#">Jackets</a></li>
-                        <li><a href="#">Dresses</a></li>
-                        <li><a href="#">Shirts</a></li>
-                        <li><a href="#">T-shirts</a></li>
-                        <li><a href="#">Jeans</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-heading">
-                    <a
-                      data-toggle="collapse"
-                      data-target="#collapseFour"
-                    >Accessories</a>
-                  </div>
-                  <div
-                    id="collapseFour"
-                    class="collapse"
-                    data-parent="#accordionExample"
-                  >
-                    <div class="card-body">
-                      <ul>
-                        <li><a href="#">Coats</a></li>
-                        <li><a href="#">Jackets</a></li>
-                        <li><a href="#">Dresses</a></li>
-                        <li><a href="#">Shirts</a></li>
-                        <li><a href="#">T-shirts</a></li>
-                        <li><a href="#">Jeans</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-heading">
-                    <a
-                      data-toggle="collapse"
-                      data-target="#collapseFive"
-                    >Cosmetic</a>
-                  </div>
-                  <div
-                    id="collapseFive"
                     class="collapse"
                     data-parent="#accordionExample"
                   >
