--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,13 +9,14 @@
         />
       </div>
       <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-        <form>
+        <form method="post" action="">
           <!-- Email input -->
           <div class="form-outline mb-4">
-            <label class="form-label" for="email">Email address</label>
+            <label class="form-label" for="username">Username</label>
             <input
-              type="email"
-              id="email"
+              type="username"
+              id="username"
+              name="username"
               class="form-control form-control-lg"
             />
           </div>
@@ -26,6 +27,7 @@
             <input
               type="password"
               id="password"
+              name="password"
               class="form-control form-control-lg"
             />
           </div>
